--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,7 +12,13 @@ nav.header a{
     text-decoration: none;
     color: #FFFFFF;
     margin-left: 30px;
+    
 }
 nav.header a:hover{
     color: orange;
+}
+.userInfo{
+    color: bisque;
+    font-size: small;
+    padding-left: 5px;
 }
