--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid #c33125;
-    margin-left: 400px;
-    margin-right: 400px;
+    border: 1px solid #e1d8d7;
+    margin-left: 480px;
+    margin-right: 480px;
     margin-top: 45px;
     padding: 25px 15px;
+    box-shadow: 1px 2px 3px 4px rgba(167, 202, 51, 0.395);
   }
   .labelCss{
     text-align: start;
