--- a/src/components/SignUP/SignUp.css
+++ b/src/components/SignUP/SignUp.css
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #c33125;
-  margin-left: 400px;
-  margin-right: 400px;
+  border: 1px solid #bfa8a6a9;
+  margin-left: 460px;
+  margin-right: 460px;
   margin-top: 45px;
   padding: 25px 15px;
+  box-shadow: 1px 2px 3px 4px rgba(208, 225, 151, 0.395);
 }
 .labelCss{
     text-align: start;
@@ -63,4 +64,8 @@ button {
 
 .continue-with-google:hover {
   background-color: #c33125;
+}
+
+.error{
+  color: #c33125;
 }
